project2/test/test_2_r10.out
Error type 10 at line 17: applying indexing operator ([...]) on non-array type variables
