project2/test/test_2_r10.out2
Error type 10 at Line 17: applying indexing operator ([...]) on non-array type variables
Error type 8 at Line 17: function return type is not matched
